[package]
name = "meteorapool"
version = "0.3.0"
edition = "2021"
description = "CPIs for The Meteora Pool Program"
authors = ["Ian Macalinao <ian@saber.so>"]
repository = "https://github.com/saber-hq/anchor-gen"
license = "Apache-2.0"
keywords = ["solana", "anchor",""]

[features]
default = ["cpi"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-gen = { version = "0.3.1" }
anchor-lang = "0.29.0"